add hello page for landing.

--- a/perber/index.html
+++ b/perber/index.html
@@ -8,7 +8,8 @@
     <meta name="description" content="Perber">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="icon" type="image/png" href="img/favicon.png">
+    <link rel="icon" type="image/png" href="images/favicon.png">
+    <link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700|Open+Sans:300italic,400,300,700" rel="stylesheet" type="text/css">
     <link rel="stylesheet" type="text/css" href="css/semantic.min.css"/>
     <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css"/>
     <link rel="stylesheet" type="text/css" href="css/perber.css"/>
@@ -78,7 +79,15 @@
 
 <!-- toolbar -->
 <script type="text/template" id="template-toolbar">
-    时时
+    <div class="ui yellow icon message">
+      <i class="inbox icon"></i>
+      <div class="content">
+        <div class="header">
+          Have you heard about our mailing list?
+        </div>
+        <p>Get all the best inventions in your e-mail every day. Sign up now!</p>
+      </div>
+    </div>
 </script>
 
 <!-- speakpanel -->
