fix img link error

--- a/perber/hello.html
+++ b/perber/hello.html
@@ -41,7 +41,7 @@
                 <div class="ui vertical fluid one items">
                     <div class="item">
                         <div class="image">
-                            <img src="http://img5.douban.com/view/status/raw/public/c08458d661bf959.jpg">
+                            <img src="http://ww2.sinaimg.cn/large/de9eaaddjw1e9y17jxnojj20g50bstab.jpg">
                             <a class="like ui corner label">
                                 <i class="like icon"></i>
                             </a>
