--- a/experiment/happynewyear.html
+++ b/experiment/happynewyear.html
@@ -52,7 +52,7 @@
     </div>
     <h2>春节快乐！听首歌先~</h2>
     <p style="padding:0 20px;line-height:1.8;margin-bottom:30px;font-size:14px;color:#ee9c9d;">因为忙着过年，最近3天先暂停服务了，吃好喝好，回见您嘞！</p>
-    <p style="font-size:12px;color:#e67070;"><a style="color:#e67070;border-bottom:1px dashed #e67070;" href="https://www.twitter.com/han_jiyun" target="_blank">@han_jiyun</a> 2014-01-30</p>
+    <p style="font-size:12px;color:#e67070;">2014-01-30</p>
 
 </div>
 <script type="text/javascript" src="player/js/player.jquery.rotate.js"></script>
