--- a/experiment/happynewyear.html
+++ b/experiment/happynewyear.html
@@ -50,8 +50,8 @@
             </div>
         </div>
     </div>
-    <h2>春节快乐！听首歌先~</h2>
-    <p style="padding:0 20px;line-height:1.8;margin-bottom:30px;font-size:14px;color:#ee9c9d;">因为忙着过年，最近3天先暂停服务了，吃好喝好，回见您嘞！</p>
+    <h2>正在修复图片上传功能！听首歌先~</h2>
+    <p style="padding:0 20px;line-height:1.8;margin-bottom:30px;font-size:14px;color:#ee9c9d;">预计2月28号重新启动。吃好喝好，回见您嘞！</p>
     <p style="font-size:12px;color:#e67070;">2014-01-30</p>
 
 </div>
