modify mp3 link

--- a/experiment/happynewyear.html
+++ b/experiment/happynewyear.html
@@ -29,6 +29,18 @@
         body{min-width: 310px;background: #df4546 url(images/stardust.png) 0 0 repeat; color:#fff;}
         h1{margin: 0;padding: 20px 0px;border-color: rgba(255,255,255,0.2);letter-spacing: 2px;background-color: #fff;color: #df4546;}
         i{color: #fff;}
+        h3{
+            font-size: 14px;
+            font-weight: normal;
+        }
+        h3 a{
+            color: #fff;
+            border-bottom: 1px dashed #eee;
+        }
+        h3 a:hover{
+            color: #fff;
+            border-bottom:1px solid #fff;
+        }
     </style>
 
 </head>
@@ -51,6 +63,7 @@
         </div>
     </div>
     <h2>正在修复图片上传功能！听首歌先~</h2>
+    <h3><a href="http://www.xiami.com/song/1715017" target="_blank">Guru Guru - Living in the Woods</a></h3>
     <p style="padding:0 20px;line-height:1.8;margin-bottom:30px;font-size:14px;color:#ee9c9d;">预计2月28号重新启动。吃好喝好，回见您嘞！</p>
     <p style="font-size:12px;color:#e67070;">2014-02-26</p>
 
