--- a/experiment/happynewyear.html
+++ b/experiment/happynewyear.html
@@ -63,7 +63,7 @@
         </div>
     </div>
     <h2>正在修复图片上传功能！听首歌先~</h2>
-    <h3><a href="http://www.xiami.com/song/1715017" target="_blank">Guru Guru - Living in the Woods</a></h3>
+    <h3><a href="http://www.xiami.com/song/1122173" target="_blank">John Lennon - Oh My Love</a></h3>
     <p style="padding:0 20px;line-height:1.8;margin-bottom:30px;font-size:14px;color:#ee9c9d;">预计2月28号重新启动。吃好喝好，回见您嘞！</p>
     <p style="font-size:12px;color:#e67070;">2014-02-26</p>
 
