--- a/experiment/happynewyear.html
+++ b/experiment/happynewyear.html
@@ -17,16 +17,16 @@
     <script type="text/javascript" src="js/jquery.1.10.1.min.js"></script>
 
     <script>
-        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-        ga('create', 'UA-44986847-1', 'perber.com');
-        ga('send', 'pageview');
+        // (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        // (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        // m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        // })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+        // ga('create', 'UA-44986847-1', 'perber.com');
+        // ga('send', 'pageview');
     </script>
 
     <style type="text/css">
-        body{min-width: 310px;background: #df4546 url(images/stardust.png) 0 0 repeat; color:#fff;}
+        body{min-width: 310px;/*background: #df4546 url(images/stardust.png) 0 0 repeat;*/ color:#fff;}
         h1{margin: 0;padding: 20px 0px;border-color: rgba(255,255,255,0.2);letter-spacing: 2px;background-color: #fff;color: #df4546;}
         i{color: #fff;}
         h3{
