--- a/experiment/happynewyear.html
+++ b/experiment/happynewyear.html
@@ -17,16 +17,16 @@
     <script type="text/javascript" src="js/jquery.1.10.1.min.js"></script>
 
     <script>
-        // (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-        // (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-        // m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-        // })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-        // ga('create', 'UA-44986847-1', 'perber.com');
-        // ga('send', 'pageview');
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+        ga('create', 'UA-44986847-1', 'perber.com');
+        ga('send', 'pageview');
     </script>
 
     <style type="text/css">
-        body{min-width: 310px;/*background: #df4546 url(images/stardust.png) 0 0 repeat;*/ color:#fff;}
+        body{min-width: 310px;background: #df4546 url(images/stardust.png) 0 0 repeat; color:#fff;}
         h1{margin: 0;padding: 20px 0px;border-color: rgba(255,255,255,0.2);letter-spacing: 2px;background-color: #fff;color: #df4546;}
         i{color: #fff;}
         h3{
@@ -62,10 +62,8 @@
             </div>
         </div>
     </div>
-    <h2>正在修复图片上传功能！听首歌先~</h2>
-    <h3><a href="http://www.xiami.com/song/1122173" target="_blank">John Lennon - Oh My Love</a></h3>
-    <p style="padding:0 20px;line-height:1.8;margin-bottom:30px;font-size:14px;color:#ee9c9d;">预计2月28号重新启动。吃好喝好，回见您嘞！</p>
-    <p style="font-size:12px;color:#e67070;">2014-02-26</p>
+    <h2>正在增加禁止刷屏功能！听首歌先~</h2>
+    <p style="font-size:12px;color:#e67070;">2014-03-23</p>
 
 </div>
 <script type="text/javascript" src="player/js/player.jquery.rotate.js"></script>
