--- a/experiment/happynewyear.html
+++ b/experiment/happynewyear.html
@@ -62,7 +62,8 @@
             </div>
         </div>
     </div>
-    <h2>正在增加禁止刷屏功能！听首歌先~</h2>
+    <h2>正在增加刷屏限制功能。听首歌先~</h2>
+    <h3>什么时候做完我也不知道。</h3>
     <p style="font-size:12px;color:#e67070;">2014-03-23</p>
 
 </div>
