--- a/experiment/happynewyear.html
+++ b/experiment/happynewyear.html
@@ -62,9 +62,9 @@
             </div>
         </div>
     </div>
-    <h2>正在增加刷屏限制功能。听首歌先~</h2>
-    <h3>什么时候做完我也不知道。</h3>
-    <p style="font-size:12px;color:#e67070;">2014-03-23</p>
+    <h2>正在修复发布虾米音乐功能。听首歌先~</h2>
+    <h3>预计下午5点之前重新开放。</h3>
+    <p style="font-size:12px;color:#e67070;">2014-04-4</p>
 
 </div>
 <script type="text/javascript" src="player/js/player.jquery.rotate.js"></script>
